--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link href="style.css" rel="stylesheet"> </link>
 </head>
 <body>
     <h2>Shreyash's component library</h2>
     <p>I am practising html ,which i am learning with the help 
         of youtube video uploaded on tanay pratap's channel
     </p>
+    <p>This paragraph will have <strong>bold</strong> text.</p>
 
  <hr>
 
@@ -18,7 +21,7 @@
  <h1>This is biggest heading</h1>
  <h2>This is second biggest heading</h2>
 
- <p>Let me show you the normal text. This is free flowing and will wrap at the end like\
+ <p>Let me show you the normal text. This is free flowing and will wrap at the end like
      a paragraph
  </p>
  <small>This is relatively smaller text</small>
@@ -27,72 +30,83 @@
 
  <h2>@container</h2>
  <h3>Fluid container</h3>
-  <p>This is a fluid container and it will go till the end of the page
-       </p>
+  <div class="container" >This is a fluid container and it will go till the end of the page
+  </div>
   <h3>Center container</h3>
-  <p>This is centered container and it will go till 
+  <div class="container container-center">This is centered container and it will go till 
       the specified width
-  </p>  
+    </div> 
   <hr>
 
   <h3>@links</h3>
    
-  <a href="/">primary link</a>
-  <a href="/">Secondary link</a>
+  <a href="/" class="link link-primary">primary link</a>
+  <a href="/" class="link link-secondary">Secondary link</a>
 
   <hr>
     <h2>@lists</h2>
     <h3>unordered lists</h3>
-    <ul>
-        <li>Item one</li>
-        <li>Item two</li>
-        <li>Item three</li>
+    <ul class="list-non-bullet">
+         <li>Item one</li>
+         <li>Item two</li>
+         <li>Item three</li>
     </ul>
 
     <h3>unordered inline list</h3>
-    <ul>
-        <li>Inline item one</li>
-        <li>Inline item two</li>
-        <li>Inline item three</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">Inline item one</li>
+        <li class="list-item-inline">Inline item two</li>
+        <li class="list-item-inline">Inline item three</li>
     </ul>
 
     <h3>reverse ordered list</h3>
-    <ol>
+    <ol reversed>
         <li>Milk</li>
         <li>eggs</li>
         <li>break</li>
     </ol>
     <hr>
     <h2>@nav</h2>
-    <h3>IAmBrand</h3>
-    <ul>
-        <li>
-            <a href="/">Home</a>
+    <nav class="navigation container ">
+        <div class="navigation nav-brand">IAmBrand</div>
+       <ul class="navigation nav-pills">
+        <li class="list-item-inline">     
+            <a href="/" class="link link-active">Home</a>
         </li>
-        <li>
-            <a href="/">products</a>
+        <li class="list-item-inline"> 
+            <a href="/" class="link">products</a>
         </li>
-        <li>
-            <a href="/">about</a>
+        <li class="list-item-inline"> 
+            <a href="/" class="link">about</a>
         </li>
     </ul>
-
+    </nav>
     <hr>
 
     <h2>@header</h2>
-    <header>
-         <img src="image/hero.svg">
-         <h3>Heading inside header</h3>
+    <header class="hero">
+         <img class="hero-img" src="image/hero.svg">
+         <h3 class="hero-heading">Adarsh shreyash 
+             <span class="hero-color">the developer</span></h3>
     </header>
     <hr>
 
     <h2>@section</h2>
-    <section>
-        <h3>white section</h3>
-        <div>This will have white background</div>
-       
-        <h3>Off white section</h3> 
-        <div>This will have grey background</div>
+    
+<section class="section">
+    <div class="container container-center">
+    <h1>white section</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+</section>
+
+<section class="section ow">
+    <div class="container container-center">
+    <h1>Off white section</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+</section>
+
 
         <hr>
         <h2>@footer</h2>
