--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     
 <section class="section">
     <div class="container container-center">
-    <h1>white section</h1>
+    <h1>White section</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
 </section>
@@ -110,13 +110,13 @@
 
         <hr>
         <h2>@footer</h2>
-        <footer>
-            <h3>Some small heading inside footer</h3>
-
-            <ul>
-                <li>social one</li>
-                <li>social two</li>
-                <li>social three</li>
+        <footer class="footer">
+          <div>Some small heading inside footer</div>
+                   
+            <ul class="list-non-bullet">
+                <li class="list-item-inline">  <a class="link" href="/">social one</a></li>
+                <li class="list-item-inline">  <a class="link" href="/">social two</a></li>
+                <li class="list-item-inline">  <a class="link" href="/">social three</a></li>
             </ul>
         </footer>
 
@@ -136,9 +136,7 @@
   
   
 
-<div style="height: 30vh;">
 
-</div>
 
 </body>
 </html>
